# iced-loading-indicator

./: .gitignore  Cargo.toml  README.md
examples/: detailed.rs  in_app.rs  widget.rs
src/: lib.rs
